# cvecli

./: .gitignore  AGENTS.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: getting-started.md  index.md
docs/api/: search.md
examples/: README.md  basic_search.py  cpe_version_search.py  export_data.py  purl_search.py  severity_date_filter.py
notebook/: stats.ipynb
src/cvec/: __init__.py
src/cvec/cli/: __init__.py  formatters.py  main.py
src/cvec/core/: __init__.py  config.py
src/cvec/models/: __init__.py  cve_model.py
src/cvec/services/: __init__.py  artifact_fetcher.py  downloader.py  embeddings.py  extractor.py  search.py
src/cvecli/: __init__.py  constants.py
src/cvecli/cli/: formatters.py  main.py
src/cvecli/cli/commands/: get.py  search.py
src/cvecli/core/: __init__.py  config.py
src/cvecli/models/: __init__.py  cve_model.py  query_filters.py
src/cvecli/services/: __init__.py  artifact_fetcher.py  cpe.py  downloader.py  embeddings.py  extractor.py  search.py
tests/: conftest.py  test_artifact_fetcher.py  test_cli.py  test_cpe.py  test_downloader.py  test_embeddings.py  test_examples.py  test_extractor.py  test_integration.py  test_output_file.py  test_search.py  test_version.py  test_version_edge_cases.py
tests/fixtures/sample_data/: cve_credits.parquet  cve_cwes.parquet  cve_descriptions.parquet  cve_metrics.parquet  cve_products.parquet  cve_references.parquet  cve_tags.parquet  cve_versions.parquet  cves.parquet
tests/unit/cli/: test_output_formatters.py
tests/unit/services/: test_artifact_fetcher.py
