[project]
name = "cvec"
version = "0.1.0"
description = "CLI tool for downloading, extracting, and searching CVE data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["cve", "security", "vulnerability", "cli"]
dependencies = [
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "types-requests>=2.32.4.20250913",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.5.0",
    "numpy>=2.0.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.32.4.20250611",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "fastembed>=0.5.0",
    "numpy>=2.0.0",
    "datamodel-code-generator>=0.53.0",
]

[project.scripts]
cvec = "cvec.cli.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | src/cvec/models/cve_model\.py
)
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
