[project]
name = "cvecli"
dynamic = ["version"]
description = "CLI tool for downloading, extracting, and searching CVE data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Romain RIVIERE" }
]
keywords = ["cve", "security", "vulnerability", "cli", "nvd", "cybersecurity", "cpe", "cwe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.31.0,<2",
    "pydantic>=2.11.7,<3",
    "requests>=2.32.3,<3",
    "typer>=0.16.0,<1",
    "rich>=14.0.0,<15",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.5.0,<1",
    "numpy>=2.0.0,<3",
]

notebook = [
    "plotly>=6.0.0,<7",
    "jupyter>=1.0.0,<2",
    "ipykernel>=6.29.0,<7",
]


[project.scripts]
cvecli = "cvecli.cli.main:main"

[project.urls]
Homepage = "https://github.com/RomainRiv/cvecli"
Documentation = "https://romainriv.github.io/cvecli/"
Repository = "https://github.com/RomainRiv/cvecli"
Issues = "https://github.com/RomainRiv/cvecli/issues"
Changelog = "https://github.com/RomainRiv/cvecli/releases"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cvecli/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.14.14",
    "mypy>=1.8.0",
    "ty>=0.0.14",
    "types-requests>=2.32.4.20250913",
    "fastembed>=0.5.0,<1",
    "numpy>=2.0.0,<3",
    "datamodel-code-generator>=0.53.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cvecli"]

[tool.hatch.build.targets.wheel.shared-data]
"licences/CVE_TERMS_OF_USE.md" = "share/cvecli/licences/CVE_TERMS_OF_USE.md"
"licences/NOTICE.txt" = "share/cvecli/licences/NOTICE.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests that run without external dependencies",
    "integration: Integration tests that may require real data",
    "slow: Tests that take longer to run",
    "requires_real_data: Tests that require actual CVE database",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | src/cvecli/models/cve_model\.py
)
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/cvecli/models/cve_model.py"]
